add view_project and edit filter

--- a/src/templates/filter.html
+++ b/src/templates/filter.html
@@ -31,25 +31,33 @@
                     <tr>
                         <td class="text-center pt-3">პროექტის სახელი:</td>
                         <td>
-                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                            <label class="form-label" for="form12">
+                                <input type="text" id="form12" class="form-control form-control-sm" />
+                            </label>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center pt-3">ხელშეკრულების ნომერი:</td>
                         <td>
-                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                            <label class="form-label" for="form12">
+                                <input type="text" id="form12" class="form-control form-control-sm" />
+                            </label>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center pt-3">თარიღი (დან):</td>
                         <td>
-                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                            <label class="form-label" for="form12">
+                                <input type="date" class="form-control form-control-sm" id="startTime" name="start_time" required>
+                            </label>
                         </td>
                     </tr>
                     <tr>
                         <td class="text-center pt-3">თარიღი (მდე):</td>
                         <td>
-                            <label class="form-label" for="form12"><input type="text" id="form12" class="form-control form-control-sm" /></label>
+                            <label class="form-label" for="form12">
+                                <input type="date" class="form-control form-control-sm" id="endTime" name="end_time" required>
+                            </label>
                         </td>
                     </tr>
                     <tr>
