--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -101,17 +101,17 @@
         <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
             <thead class="table-success">
                 <tr>
-                    <th>გეოლოგიური აგეგმვა</th>
-                    <th>ობიექტების რაოდენობა</th>
-                    <th>ჭაბურღილები</th>
-                    <th>ჭაბურღილების რაოდენობა</th>
-                    <th>შურფები</th>
-                    <th>შურფების რაოდენობა</th>
-                    <th>ლაბორატორიული ტესტი</th>
+                    <th>სეისმური პროფილები</th>
+                    <th>პროფილების რაოდენობა</th>
+                    <th>VS30</th>
+                    <th>VS30 ჭრილი ექსელი</th>
+                    <th>გრუნტის კატეგორია ქართული ნორმებით</th>
+                    <th>გრუნტის კატეგორია საერთაშორისო ნორმებით</th>
+                    <th>გეოფიზიკური კაროტაჟი</th>
                     <th>წერტილების რაოდენობა</th>
-                    <th>საარქივო ფაილი</th>
-                    <th>საარქივო ფაილი</th>
-                    <th>საარქივო ფაილი</th>
+                    <th>ელექტრული პროფილები</th>
+                    <th>წერტილების რაოდენობა</th>
+                    <th>გეორადარი</th>
                     <th>საარქივო ფაილი</th>
                     <th></th>
                     <th></th>
