--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block body %}
-    <script type="text/javascript" src="{{ url_for('static', filename='js/projects/geological.js') }}" defer></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/projects/geophysical.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/geological.js') }}" defer></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/geophysical.js') }}" defer></script>
     <div id="projectId" data-project-id="{{ project_id }}"></div>
     <div class="projectImageDiv">
         <div class="card mt-2 projectDiv">
