--- a/src/templates/projects/view_project.html
+++ b/src/templates/projects/view_project.html
@@ -102,15 +102,15 @@
             <thead class="table-success">
                 <tr>
                     <th>სეისმური პროფილები</th>
-                    <th>პროფილების რაოდენობა</th>
+                    <th>სეისმური პროფილების რაოდენობა</th>
                     <th>VS30</th>
                     <th>VS30 ჭრილი ექსელი</th>
                     <th>გრუნტის კატეგორია ქართული ნორმებით</th>
                     <th>გრუნტის კატეგორია საერთაშორისო ნორმებით</th>
                     <th>გეოფიზიკური კაროტაჟი</th>
-                    <th>წერტილების რაოდენობა</th>
+                    <th>კაროტაჟის წერტილების რაოდენობა</th>
                     <th>ელექტრული პროფილები</th>
-                    <th>წერტილების რაოდენობა</th>
+                    <th>ელექტრული წერტილების რაოდენობა</th>
                     <th>გეორადარი</th>
                     <th>საარქივო ფაილი</th>
                     <th></th>
