--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -150,6 +150,46 @@
         </table>
     </div>
 
+    <!-- for Geophysical hazard -->
+    <div class="table-responsive-xxl text-center mt-1 mb-5" style="font-size: x-small;">
+        <table class="table align-middle table-bordered rounded-2 border-muted mb-0 bg-white table-striped">
+            <thead class="table-info">
+                <tr>
+                    <th>განედი (x)</th>
+                    <th>გრძედი (y)</th>
+                    <th>სქემის აღწერა</th>
+                    <th>PGA (g) 1%</th>
+                    <th>PGA (g) 2%</th>
+                    <th>PGA (g) 5%</th>
+                    <th>PGA (g) 7%</th>
+                    <th>PGA (g) 10%</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="geophysic_georadarTableBody">
+                <tr>
+                    <td>41.1234</td>
+                    <td>42.549</td>
+                    <td>Test Text</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>
+                        <a class="btn btn-info" href="#">Edit</a>
+                    </td>
+                    <td>
+                        <form action="#" method="POST" style="display:inline;">
+                            <button type="submit" class="btn btn-danger btn-block" onclick="return confirm('Are you sure you want to delete this station?');">Delete</button>
+                        </form>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
     <!-- for Project Data -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
