--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,7 +1,7 @@
 {% from "macros.html" import create_navlink %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="height: 3.5rem;">
-    <div class="container">
+    <div class="container-lg">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
