--- a/src/templates/geophysical/view_geophysical.html
+++ b/src/templates/geophysical/view_geophysical.html
@@ -163,6 +163,7 @@
                     <th>PGA (g) 5%</th>
                     <th>PGA (g) 7%</th>
                     <th>PGA (g) 10%</th>
+                    <th>PGA (g) 20%</th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -177,6 +178,7 @@
                     <td>0</td>
                     <td>0</td>
                     <td>2</td>
+                    <td>0</td>
                     <td>
                         <a class="btn btn-info" href="#">Edit</a>
                     </td>
